Bug 427027 - Empty row in time zones list
Summary: Empty row in time zones list
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Digital Clock widget (other bugs)
Version First Reported In: master
Platform: Neon Linux
: NOR minor
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-09-27 13:13 UTC by Patrick Silva
Modified: 2021-03-01 16:22 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.22
Sentry Crash Report:


Attachments
screenshot (97.59 KB, image/png)
2020-09-27 13:13 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-09-27 13:13:08 UTC
Created attachment 131961 [details]
screenshot

STEPS TO REPRODUCE
1. open digital clock settings
2. click on Time Zones
3. scroll down to the last time zone

OBSERVED RESULT
as we can see in the attached screenshot, there is an empty row

EXPECTED RESULT
no empty row

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.20.80
KDE Frameworks Version: 5.75.0
Qt Version: 5.15.0
Comment 1 Nate Graham 2020-09-29 18:35:30 UTC
Can confirm.
Comment 2 Nate Graham 2021-02-22 20:29:29 UTC
Still there in Plasma 5.21. The data model seems to have this odd item in it.
Comment 3 Bug Janitor Service 2021-02-28 12:56:25 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/681
Comment 4 Nate Graham 2021-03-01 16:22:18 UTC
Git commit 69d5de3eac1b0b75bae2e5be9d3781f26aa4088d by Nate Graham, on behalf of Willyanto Willyanto.
Committed on 01/03/2021 at 16:21.
Pushed by ngraham into branch 'master'.

Add Yangon to TimezonesI18n

M  +1    -0    applets/digital-clock/plugin/timezonesi18n.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/69d5de3eac1b0b75bae2e5be9d3781f26aa4088d