Add Yangon to TimezonesI18n

BUG: 427027